// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GitExpertApp /> debe de mostrar una lista de categoria 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Smash"
      key="Smash"
    />
    <GifGrid
      category="Cars"
      key="Cars"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GitExpertApp /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
